KRNL-1577: fix composite ID column validation in admin import ()